--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Spotlight - The Game</title>
 </head>
 
 <body>
-    <p> SPOTLIGHT - The GAME</p>
+    <div id="splash-screen"></div>
+    <p>Hello</p>
 
+
+
+    <script src="./js/main.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/player.js"></script>
+    <script src="./js/spotlight.js"></script>
 </body>
 
 </html>
