add splash screen and game screen

--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="en">
 
 <head>
+    <title>Spotlight - The Game</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Spotlight - The Game</title>
 </head>
 
 <body>
-    <div id="splash-screen"></div>
-    <p>Hello</p>
+    <main class="container"></main>
 
 
 
-    <script src="./js/main.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/player.js"></script>
-    <script src="./js/spotlight.js"></script>
+    <script type="module">
+
+        import "./js/main.mjs"
+    </script>
 </body>
 
 </html>
